lab01/BoxFilterP1_10.log
Running SAT version.. 
Platform 0 : The pocl project
Platform 1 : NVIDIA Corporation
Platform 2 : Advanced Micro Devices, Inc.

Selected Platform Vendor : NVIDIA Corporation
Device 0 : NVIDIA GeForce RTX 2070 SUPER Device ID is 0x244b0c30
 
			BUILD LOG
 ************************************************
<kernel>:74:32: error: use of undeclared identifier 'convert_uchar4_sat'; did you mean 'convert_uchar_sat'?
        outputImage[x + y * width] = (convert_uchar4_sat)((sumA + sumC - sumB - sumD) / filterSize);
                                      ^~~~~~~~~~~~~~~~~~
                                      convert_uchar_sat
cl_kernel.h:8678:26: note: 'convert_uchar_sat' declared here
uchar16 __OVERLOADABLE__ convert_uchar_sat(double16); 
                         ^
<kernel>:74:52: error: passing 'int4' (vector of 4 'int' values) to parameter of incompatible type 'double16' (vector of 16 'double' values)
        outputImage[x + y * width] = (convert_uchar4_sat)((sumA + sumC - sumB - sumD) / filterSize);
                                                          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cl_kernel.h:8678:52: note: passing argument to parameter here
uchar16 __OVERLOADABLE__ convert_uchar_sat(double16); 
                                                   ^

 ************************************************
Error: clBuildProgram failed. Error code : CL_BUILD_PROGRAM_FAILURE
Location : /var/lib/jenkins/workspace/APPSDK_BUILD/C/Release/L/LBM/P/x64/S/OpenCL/T/gcc-4.8.4/samples/opencl/cl/1.x/BoxFilter/../../../../../include/SDKUtil/CLUtil.hpp:938
Error: buildOpenCLProgram() failed
Location : /var/lib/jenkins/workspace/APPSDK_BUILD/C/Release/L/LBM/P/x64/S/OpenCL/T/gcc-4.8.4/samples/opencl/cl/1.x/BoxFilter/BoxFilterSAT.cpp:281


Running Separable version.. 
Platform 0 : The pocl project
Platform 1 : NVIDIA Corporation
Platform 2 : Advanced Micro Devices, Inc.

Selected Platform Vendor : NVIDIA Corporation
Device 0 : NVIDIA GeForce RTX 2070 SUPER Device ID is 0x244b0c30
 
			BUILD LOG
 ************************************************
<kernel>:74:32: error: use of undeclared identifier 'convert_uchar4_sat'; did you mean 'convert_uchar_sat'?
        outputImage[x + y * width] = (convert_uchar4_sat)((sumA + sumC - sumB - sumD) / filterSize);
                                      ^~~~~~~~~~~~~~~~~~
                                      convert_uchar_sat
cl_kernel.h:8678:26: note: 'convert_uchar_sat' declared here
uchar16 __OVERLOADABLE__ convert_uchar_sat(double16); 
                         ^
<kernel>:74:52: error: passing 'int4' (vector of 4 'int' values) to parameter of incompatible type 'double16' (vector of 16 'double' values)
        outputImage[x + y * width] = (convert_uchar4_sat)((sumA + sumC - sumB - sumD) / filterSize);
                                                          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cl_kernel.h:8678:52: note: passing argument to parameter here
uchar16 __OVERLOADABLE__ convert_uchar_sat(double16); 
                                                   ^

 ************************************************
Error: clBuildProgram failed. Error code : CL_BUILD_PROGRAM_FAILURE
Location : /var/lib/jenkins/workspace/APPSDK_BUILD/C/Release/L/LBM/P/x64/S/OpenCL/T/gcc-4.8.4/samples/opencl/cl/1.x/BoxFilter/../../../../../include/SDKUtil/CLUtil.hpp:938
Error: buildOpenCLProgram() failed
Location : /var/lib/jenkins/workspace/APPSDK_BUILD/C/Release/L/LBM/P/x64/S/OpenCL/T/gcc-4.8.4/samples/opencl/cl/1.x/BoxFilter/BoxFilterSeparable.cpp:227
